<resources>
    <string name="app_name">Playlist maker</string>
    <string name="main_find">Поиск</string>
    <string name="main_media">Медиатека</string>
    <string name="main_settings">Настройки</string>
    <string name="settings_black">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_user_agreement">Пользовательское соглашение</string>
    <string name="settings_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_support_mail">ya0961@yandex.ru</string>
    <string name="settings_share_message">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="settings_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="something_went_wrong">Чтото пошло не так</string>
    <string name="nothing_found">Ничего не нашлось</string>

    <string name="network_error">Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте \n
        подключение к интернету
    </string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="media_back">Кнопка назад</string>
    <string name="button_back">Кнопка назад</string>
    <string name="track_image">Обложка трека</string>
    <string name="button_play_list">Плейлист</string>
    <string name="button_play">Воспроизведение трека</string>
    <string name="button_favorites">Избранное</string>
    <string name="track_time_example">0:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mediathek">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\n
        ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

</resources>