<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/some_id"
    android:background="@color/settings_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/settings_back"
            style="@style/SettingsImageStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/find_margin_start"
            android:layout_marginEnd="@dimen/find_margin_end"
            android:src="@drawable/arrow_back" />

        <TextView
            android:text="@string/main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:textSize="26sp"
            tools:ignore="RtlSymmetry"
            style="SettingsTextColor"
            />


    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="24dp"
        style="@style/SettingsRelativeLayoutStyle">

        <TextView
            android:text="@string/settings_black"
            style="@style/SettingsTextStyle" />

        <Switch
            android:id="@+id/switch_on"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml"
            style="@style/SettingsImageStyle" />

    </RelativeLayout>

    <RelativeLayout style="@style/SettingsRelativeLayoutStyle">

        <TextView
            android:text="@string/settings_share"
            style="@style/SettingsTextStyle"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/settingsShare"
            style="@style/SettingsImageStyle"
            android:src="@drawable/share" />
    </RelativeLayout>

    <RelativeLayout style="@style/SettingsRelativeLayoutStyle">

        <TextView
            android:text="@string/settings_support"
            style="@style/SettingsTextStyle"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/settingsSupport"
            style="@style/SettingsImageStyle"
            android:src="@drawable/support" />
    </RelativeLayout>

    <RelativeLayout style="@style/SettingsRelativeLayoutStyle">

        <TextView
            android:text="@string/settings_user_agreement"
            style="@style/SettingsTextStyle"
            android:layout_centerVertical="true"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/settingsUserAgreement"
            android:src="@drawable/arrow_forward"
            style="@style/SettingsImageStyle" />
    </RelativeLayout>

</LinearLayout>