<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:orientation="vertical"
    android:background="@color/settings_background"
    tools:context="com.example.playlistmaker.search.ui.SearchFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/find_padding_horizontal">
        >

    <TextView
        android:text="@string/main_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="22sp"
        android:textColor="@color/text_color"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        />

</LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:layout_marginBottom="24dp"
        >

        <EditText
            android:id="@+id/input_search"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:drawableStart="@drawable/find_hint"
            android:drawablePadding="8dp"
            android:drawableTint="@color/find_hint_text"
            android:hint="@string/main_find"
            android:inputType="text"
            android:maxLength="255"
            android:padding="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="32dp"
            android:textFontWeight="400"
            android:fontFamily="@font/ys_display_medium"
            android:background="@drawable/rounded_background"
            android:textColor="@color/find_input_text"
            android:textSize="16sp"
            android:textColorHint="@color/find_hint_text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <ImageView
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:src="@drawable/clear"

            app:tint="@color/find_input_text" />
    </FrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/items_not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:visibility="gone"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="102dp"
            android:src="@drawable/no_item_find" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="16dp"
            android:text="@string/nothing_found"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/network_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:visibility="gone"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="102dp"
            android:src="@drawable/network_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/network_error"
            android:textColor="@color/text_color"
            android:textFontWeight="400"
            android:textSize="20sp" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/text_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="@color/settings_background"
            android:textFontWeight="500"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="42dp"
            android:paddingBottom="20dp"
            android:text="@string/search_history"
            android:textColor="@color/text_color"
            android:textFontWeight="500"
            android:textSize="20sp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <Button
            android:id="@+id/clear_history_button"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/text_color"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textColor="@color/settings_background"
            android:textFontWeight="500"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/find_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
    <ProgressBar
        android:layout_marginTop="140dp"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/find_progress_bar"
/>
    </LinearLayout>
</LinearLayout>